2004-09-17  Harald Harders  <h.harders@tu-bs.de>

	* term/README term/debug.trm term/gd.trm: Fix typos and add 
	information about enhanced text mode callback entries in TERM_TABLE.

	* term/post.trm:  Move definition of /Rounded to the top of the
	prolog so that it is with the other user-editable definitions.

2004-09-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/misc.c: New automatic variable $# gets
	expanded to number of arguments after "call <file>". SF patch 943749.

2004-09-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_timestamp set_xyzlabel) src/save.c (save_set_all)
	demo/contours.dem demo/surface1.dem docs/gnuplot.doc:
	Add keyword "offset" to commands of the form
	    old: set xlabel "foo" -1,-1
	    new: set xlabel "foo" offset -1,-1
	This is necessary to pave the way for string variables, as otherwise
	"set title var -1" is mis-parsed as containing the arithmetic expression
	(var-1). To maintain backward compatability, the keyword is optional.

2004-09-16  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm (delete_ps_fontfile): Remove debugging printout line.

2004-09-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata) src/graphics.c (boundary) term/x11.trm:
	Add #ifdefs so that ./configure --disable-pm3d will build successfully.

	* term/fig.trm term/epslatex.trm term/pslatex.trm term/metapost.trm
	term/tgif.trm term/pstricks.trm:  Disentangle the ordering of #ifdefs
	in the TERM_TABLE entries (MOUSE is not a subset of PM3D).

	* term/emf.trm: Remove unused label to quiet compiler warnings.

2004-09-15  Konstantin Korikov  <lostclus@ua.fm>

	* NEWS docs/gnuplot.doc src/gplt_x11.c src/set.c src/term_api.h
	src/term.c term/post.trm: Add support for character encoding koi8-u
	(cyrillic koi8 for Ukrainian users).
	SourceForge patch #966815.

2004-09-14  Ethan Merritt  <merritt@u.washington.edu>

	* demo/borders.dem demo/Makefile.am.in: Rewrite the borders demo to 