@@ -1,3 +1,14 @@
+2004-09-19  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graph3d.c (do_3dplot plot3d_vectors) src/graph3d.h 
+	src/plot3d.c (get_3ddata eval_3dplots):  Extand the plotting style
+	"with vectors" to apply to 3D plots as well.
+	    splot 'data' using <x>:<y>:<z>:<delx>:<dely>:<delz> with vectors \
+	          <arrowstyle>
+	Only cartesian coordinate mapping is currently supported.
+
+	* docs/gnuplot.doc NEWS: Document extension to 3D.
+
 2004-09-17  Harald Harders  <h.harders@tu-bs.de>
 
 	* term/README term/debug.trm term/gd.trm: Fix typos and add 
